# AI-Grader

./: .env  ReadMe.md  default.sqlite  evaluation_results.csv  pyproject.toml  run.sh  testset.csv
auto_grader/: main.py
auto_grader/utils/: __init__.py  constants.py  pickel_loader.py
instructor_code_with_answers/: all_questions.py  answers.pkl
qna_extractor/: Readme.md  main.py  pqa_testing.py  pqa_tests.md  sentence_transformer.py  test_1.py
qna_extractor/solutions_questions/: Question Bank 1 (Tan et al 2nd Edition).txt  Question Bank 1, basic classification.docx
qna_extractor/solutions_questions/QB2/: Anomaly Detection.docx  Association Analysis.docx  Classification.docx  Data.docx  False_Discoveries.docx
student_code/: all_questions.py  answers.pkl
synthetic_data_generator/: synthetic_data_generator.py
truelens/: default.sqlite  eval.py
trulens/: default.sqlite  eval.py
